[package]
edition = "2021"
name = "phantom-type"
version = "0.5.1"
rust-version = "1.70"
authors = ["warlock <internalmike@gmail.com>"]
description = "A `PhantomData` analog which prevents \"parameter is never used\" error, but does not produce any restrictions in contrast with `PhantomData`."
readme = "README.md"
documentation = "https://docs.rs/phantom-type/"
keywords = ["PhantomData", "Send", "Sync", "Unpin", "restrictions"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/phantom-type"

[features]
default = ["std"]
std = []

[dependencies]
educe = "0.6.0"

[badges]
maintenance = { status = "passively-maintained" }
